plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version "7.1.2"

}

group = 'me.cylorun'
version = '4.0.1'

compileJava {
    sourceCompatibility = '1.8'
    targetCompatibility = '1.8'
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    implementation 'commons-io:commons-io:2.11.0'
    implementation 'com.formdev:flatlaf:3.2'
    implementation 'com.google.code.gson:gson:2.10.1'

}

test {
    useJUnitPlatform()
}
jar {
    manifest {
        attributes 'Main-Class': 'me.cylorun.Main'
    }
}